Try fixing squishing

--- a/style.css
+++ b/style.css
@@ -13,11 +13,22 @@ a:hover {
     color: #d43728;
 }
 
-.main {
-    /*width: 70%;*/
-    margin: 2em auto 2em;
-    font-size: 1.25em;
-    line-height: 1.4em;
+@media only screen and (min-width: 700px) {
+    .main {
+        width: 70%;
+        margin: 2em auto 2em;
+        font-size: 1.25em;
+        line-height: 1.4em;
+    }
+}
+
+@media only screen and (max-width: 699px) {
+    .main {
+        width: 90%;
+        margin: 1.5em auto 1.5em;
+        font-size: 1em;
+        line-height: 1.2em;
+    }
 }
 
 .main .title {
